apply plugin: 'java'
apply plugin: 'application'

description = 'Analyze Standalone AEX logs from exc utility'
group = 'com.exadel'

mainClassName = 'com.exadel.aexlogs.Main'

sourceCompatibility = '1.8'

repositories {
    jcenter()
}

task fatjar(type: Jar) {
    manifest {
        attributes "Main-Class": "com.exadel.aexlogs.Main"
    }
    baseName = "aexlogs-all"
    from {
        configurations.compileClasspath.filter{ it.exists() }
            .collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}

dependencies {
    implementation 'info.picocli:picocli:4.6.2'
    implementation 'org.jsoup:jsoup:1.9.2'
    implementation 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
    implementation 'org.slf4j:slf4j-simple:1.7.30'
    implementation 'org.json:json:20210307'
    implementation 'org.mongodb:mongodb-driver-sync:4.3.0'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    testImplementation 'junit:junit:4.13'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}